[BUGFIX] Fix spacing on first element in accordion

--- a/Resources/Public/Scss/Theme/_accordion.scss
+++ b/Resources/Public/Scss/Theme/_accordion.scss
@@ -67,7 +67,7 @@ $accordion-header-padding: $card-header-padding !default;
 .accordion-body {
   .frame{
     &:first-of-type{
-      margin-top: 0;
+      margin-top: 0 !important;
     }
     &:last-of-type {
       padding-bottom: 0;
